[ticket/14175] Fix online overlap issues
PHPBB3-14175

--- a/phpBB/styles/prosilver/theme/responsive.css
+++ b/phpBB/styles/prosilver/theme/responsive.css
@@ -496,7 +496,7 @@
 	}
 
 	.has-profile .post-buttons {
-		right: 20px;
+		right: 30px;
 		top: 15px;
 	}
 
@@ -547,5 +547,10 @@
 	.attach-comment dfn {
 		width: 100%;
 	}
+}
+
+@media only screen and (max-width: 850px), only screen and (max-device-width: 850px) {
+	.postprofile { width: 28%; }
+	.postbody { width: 70%; }
 }
 
